src/parser.output
State 139 conflicts: 1 shift/reduce


Grammar

    0 $accept: Prog $end

    1 Prog: DeclVars DeclFoncts

    2 DeclVars: DeclVars TYPE Declarateurs ';'
    3         | DeclVars STRUCT IDENT '{' DeclStructVars '}' ';'
    4         | DeclVars STRUCT IDENT Declarateurs ';'
    5         | ε

    6 DeclStructVars: DeclStructVars TYPE Declarateurs ';'
    7               | DeclStructVars STRUCT IDENT Declarateurs ';'
    8               | TYPE Declarateurs ';'
    9               | STRUCT IDENT Declarateurs ';'

   10 Declarateurs: Declarateurs ',' IDENT
   11             | IDENT

   12 DeclFoncts: DeclFoncts DeclFonct
   13           | DeclFonct

   14 DeclFonct: EnTeteFonct Corps

   15 EnTeteFonct: TYPE IDENT '(' Parametres ')'
   16            | VOID IDENT '(' Parametres ')'
   17            | STRUCT IDENT IDENT '(' Parametres ')'

   18 Parametres: VOID
   19           | ListTypVar

   20 ListTypVar: ListTypVar ',' TYPE IDENT
   21           | ListTypVar ',' STRUCT IDENT IDENT
   22           | STRUCT IDENT IDENT
   23           | TYPE IDENT

   24 Corps: '{' DeclVars SuiteInstr '}'

   25 SuiteInstr: SuiteInstr Instr
   26           | ε

   27 Instr: IdExpr '=' Exp ';'
   28      | IF '(' Exp ')' Instr
   29      | IF '(' Exp ')' Instr ELSE Instr
   30      | WHILE '(' Exp ')' Instr
   31      | IDENT '(' Arguments ')' ';'
   32      | RETURN Exp ';'
   33      | RETURN ';'
   34      | '{' SuiteInstr '}'
   35      | ';'

   36 IdExpr: IDENT '.' IdExpr
   37       | IDENT

   38 Exp: Exp OR TB
   39    | TB

   40 TB: TB AND FB
   41   | FB

   42 FB: FB EQ M
   43   | M

   44 M: M ORDER E
   45  | E

   46 E: E ADDSUB T
   47  | T

   48 T: T DIVSTAR F
   49  | F

   50 F: ADDSUB F
   51  | '!' F
   52  | '(' Exp ')'
   53  | NUM
   54  | CHARACTER
   55  | IdExpr
   56  | IDENT '(' Arguments ')'

   57 Arguments: ListExp
   58          | ε

   59 ListExp: ListExp ',' Exp
   60        | Exp


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 51
    '(' (40) 15 16 17 28 29 30 31 52 56
    ')' (41) 15 16 17 28 29 30 31 52 56
    ',' (44) 10 20 21 59
    '.' (46) 36
    ';' (59) 2 3 4 6 7 8 9 27 31 32 33 35
    '=' (61) 27
    '{' (123) 3 24 34
    '}' (125) 3 24 34
    error (256)
    CHARACTER <value> (258) 54
    NUM <value> (259) 53
    IDENT <value> (260) 3 4 7 9 10 11 15 16 17 20 21 22 23 31 36 37 56
    TYPE <value> (261) 2 6 8 15 20 23
    EQ <value> (262) 42
    ORDER <value> (263) 44
    ADDSUB <value> (264) 46 50
    DIVSTAR <value> (265) 48
    OR <node> (266) 38
    AND <node> (267) 40
    VOID <node> (268) 16 18
    IF <node> (269) 28 29
    WHILE <node> (270) 30
    RETURN <node> (271) 32 33
    ELSE <node> (272) 29
    STRUCT <node> (273) 3 4 7 9 17 21 22


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    Prog <node> (29)
        on left: 1
        on right: 0
    DeclVars <node> (30)
        on left: 2 3 4 5
        on right: 1 2 3 4 24
    DeclStructVars <node> (31)
        on left: 6 7 8 9
        on right: 3 6 7
    Declarateurs <node> (32)
        on left: 10 11
        on right: 2 4 6 7 8 9 10
    DeclFoncts <node> (33)
        on left: 12 13
        on right: 1 12
    DeclFonct <node> (34)
        on left: 14
        on right: 12 13
    EnTeteFonct <node> (35)
        on left: 15 16 17
        on right: 14
    Parametres <node> (36)
        on left: 18 19
        on right: 15 16 17
    ListTypVar <node> (37)
        on left: 20 21 22 23
        on right: 19 20 21
    Corps <node> (38)
        on left: 24
        on right: 14
    SuiteInstr <node> (39)
        on left: 25 26
        on right: 24 25 34
    Instr <node> (40)
        on left: 27 28 29 30 31 32 33 34 35
        on right: 25 28 29 30
    IdExpr <node> (41)
        on left: 36 37
        on right: 27 36 55
    Exp <node> (42)
        on left: 38 39
        on right: 27 28 29 30 32 38 52 59 60
    TB <node> (43)
        on left: 40 41
        on right: 38 39 40
    FB <node> (44)
        on left: 42 43
        on right: 40 41 42
    M <node> (45)
        on left: 44 45
        on right: 42 43 44
    E <node> (46)
        on left: 46 47
        on right: 44 45 46
    T <node> (47)
        on left: 48 49
        on right: 46 47 48
    F <node> (48)
        on left: 50 51 52 53 54 55 56
        on right: 48 49 50 51
    Arguments <node> (49)
        on left: 57 58
        on right: 31 56
    ListExp <node> (50)
        on left: 59 60
        on right: 57 59


State 0

    0 $accept: • Prog $end

    $default  reduce using rule 5 (DeclVars)

    Prog      go to state 1
    DeclVars  go to state 2


State 1

    0 $accept: Prog • $end

    $end  shift, and go to state 3


State 2

    1 Prog: DeclVars • DeclFoncts
    2 DeclVars: DeclVars • TYPE Declarateurs ';'
    3         | DeclVars • STRUCT IDENT '{' DeclStructVars '}' ';'
    4         | DeclVars • STRUCT IDENT Declarateurs ';'

    TYPE    shift, and go to state 4
    VOID    shift, and go to state 5
    STRUCT  shift, and go to state 6

    DeclFoncts   go to state 7
    DeclFonct    go to state 8
    EnTeteFonct  go to state 9


State 3

    0 $accept: Prog $end •

    $default  accept


State 4

    2 DeclVars: DeclVars TYPE • Declarateurs ';'
   15 EnTeteFonct: TYPE • IDENT '(' Parametres ')'

    IDENT  shift, and go to state 10

    Declarateurs  go to state 11


State 5

   16 EnTeteFonct: VOID • IDENT '(' Parametres ')'

    IDENT  shift, and go to state 12


State 6

    3 DeclVars: DeclVars STRUCT • IDENT '{' DeclStructVars '}' ';'
    4         | DeclVars STRUCT • IDENT Declarateurs ';'
   17 EnTeteFonct: STRUCT • IDENT IDENT '(' Parametres ')'

    IDENT  shift, and go to state 13


State 7

    1 Prog: DeclVars DeclFoncts •
   12 DeclFoncts: DeclFoncts • DeclFonct

    TYPE    shift, and go to state 14
    VOID    shift, and go to state 5
    STRUCT  shift, and go to state 15

    $default  reduce using rule 1 (Prog)

    DeclFonct    go to state 16
    EnTeteFonct  go to state 9


State 8

   13 DeclFoncts: DeclFonct •

    $default  reduce using rule 13 (DeclFoncts)


State 9

   14 DeclFonct: EnTeteFonct • Corps

    '{'  shift, and go to state 17

    Corps  go to state 18


State 10

   11 Declarateurs: IDENT •
   15 EnTeteFonct: TYPE IDENT • '(' Parametres ')'

    '('  shift, and go to state 19

    $default  reduce using rule 11 (Declarateurs)


State 11

    2 DeclVars: DeclVars TYPE Declarateurs • ';'
   10 Declarateurs: Declarateurs • ',' IDENT

    ';'  shift, and go to state 20
    ','  shift, and go to state 21


State 12

   16 EnTeteFonct: VOID IDENT • '(' Parametres ')'

    '('  shift, and go to state 22


State 13

    3 DeclVars: DeclVars STRUCT IDENT • '{' DeclStructVars '}' ';'
    4         | DeclVars STRUCT IDENT • Declarateurs ';'
   17 EnTeteFonct: STRUCT IDENT • IDENT '(' Parametres ')'

    IDENT  shift, and go to state 23
    '{'    shift, and go to state 24

    Declarateurs  go to state 25


State 14

   15 EnTeteFonct: TYPE • IDENT '(' Parametres ')'

    IDENT  shift, and go to state 26


State 15

   17 EnTeteFonct: STRUCT • IDENT IDENT '(' Parametres ')'

    IDENT  shift, and go to state 27


State 16

   12 DeclFoncts: DeclFoncts DeclFonct •

    $default  reduce using rule 12 (DeclFoncts)


State 17

   24 Corps: '{' • DeclVars SuiteInstr '}'

    $default  reduce using rule 5 (DeclVars)

    DeclVars  go to state 28


State 18

   14 DeclFonct: EnTeteFonct Corps •

    $default  reduce using rule 14 (DeclFonct)


State 19

   15 EnTeteFonct: TYPE IDENT '(' • Parametres ')'

    TYPE    shift, and go to state 29
    VOID    shift, and go to state 30
    STRUCT  shift, and go to state 31

    Parametres  go to state 32
    ListTypVar  go to state 33


State 20

    2 DeclVars: DeclVars TYPE Declarateurs ';' •

    $default  reduce using rule 2 (DeclVars)


State 21

   10 Declarateurs: Declarateurs ',' • IDENT

    IDENT  shift, and go to state 34


State 22

   16 EnTeteFonct: VOID IDENT '(' • Parametres ')'

    TYPE    shift, and go to state 29
    VOID    shift, and go to state 30
    STRUCT  shift, and go to state 31

    Parametres  go to state 35
    ListTypVar  go to state 33


State 23

   11 Declarateurs: IDENT •
   17 EnTeteFonct: STRUCT IDENT IDENT • '(' Parametres ')'

    '('  shift, and go to state 36

    $default  reduce using rule 11 (Declarateurs)


State 24

    3 DeclVars: DeclVars STRUCT IDENT '{' • DeclStructVars '}' ';'

    TYPE    shift, and go to state 37
    STRUCT  shift, and go to state 38

    DeclStructVars  go to state 39


State 25

    4 DeclVars: DeclVars STRUCT IDENT Declarateurs • ';'
   10 Declarateurs: Declarateurs • ',' IDENT

    ';'  shift, and go to state 40
    ','  shift, and go to state 21


State 26

   15 EnTeteFonct: TYPE IDENT • '(' Parametres ')'

    '('  shift, and go to state 19


State 27

   17 EnTeteFonct: STRUCT IDENT • IDENT '(' Parametres ')'

    IDENT  shift, and go to state 41


State 28

    2 DeclVars: DeclVars • TYPE Declarateurs ';'
    3         | DeclVars • STRUCT IDENT '{' DeclStructVars '}' ';'
    4         | DeclVars • STRUCT IDENT Declarateurs ';'
   24 Corps: '{' DeclVars • SuiteInstr '}'

    TYPE    shift, and go to state 42
    STRUCT  shift, and go to state 43

    $default  reduce using rule 26 (SuiteInstr)

    SuiteInstr  go to state 44


State 29

   23 ListTypVar: TYPE • IDENT

    IDENT  shift, and go to state 45


State 30

   18 Parametres: VOID •

    $default  reduce using rule 18 (Parametres)


State 31

   22 ListTypVar: STRUCT • IDENT IDENT

    IDENT  shift, and go to state 46


State 32

   15 EnTeteFonct: TYPE IDENT '(' Parametres • ')'

    ')'  shift, and go to state 47


State 33

   19 Parametres: ListTypVar •
   20 ListTypVar: ListTypVar • ',' TYPE IDENT
   21           | ListTypVar • ',' STRUCT IDENT IDENT

    ','  shift, and go to state 48

    $default  reduce using rule 19 (Parametres)


State 34

   10 Declarateurs: Declarateurs ',' IDENT •

    $default  reduce using rule 10 (Declarateurs)


State 35

   16 EnTeteFonct: VOID IDENT '(' Parametres • ')'

    ')'  shift, and go to state 49


State 36

   17 EnTeteFonct: STRUCT IDENT IDENT '(' • Parametres ')'

    TYPE    shift, and go to state 29
    VOID    shift, and go to state 30
    STRUCT  shift, and go to state 31

    Parametres  go to state 50
    ListTypVar  go to state 33


State 37

    8 DeclStructVars: TYPE • Declarateurs ';'

    IDENT  shift, and go to state 51

    Declarateurs  go to state 52


State 38

    9 DeclStructVars: STRUCT • IDENT Declarateurs ';'

    IDENT  shift, and go to state 53


State 39

    3 DeclVars: DeclVars STRUCT IDENT '{' DeclStructVars • '}' ';'
    6 DeclStructVars: DeclStructVars • TYPE Declarateurs ';'
    7               | DeclStructVars • STRUCT IDENT Declarateurs ';'

    TYPE    shift, and go to state 54
    STRUCT  shift, and go to state 55
    '}'     shift, and go to state 56


State 40

    4 DeclVars: DeclVars STRUCT IDENT Declarateurs ';' •

    $default  reduce using rule 4 (DeclVars)


State 41

   17 EnTeteFonct: STRUCT IDENT IDENT • '(' Parametres ')'

    '('  shift, and go to state 36


State 42

    2 DeclVars: DeclVars TYPE • Declarateurs ';'

    IDENT  shift, and go to state 51

    Declarateurs  go to state 11


State 43

    3 DeclVars: DeclVars STRUCT • IDENT '{' DeclStructVars '}' ';'
    4         | DeclVars STRUCT • IDENT Declarateurs ';'

    IDENT  shift, and go to state 57


State 44

   24 Corps: '{' DeclVars SuiteInstr • '}'
   25 SuiteInstr: SuiteInstr • Instr

    IDENT   shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60
    RETURN  shift, and go to state 61
    ';'     shift, and go to state 62
    '{'     shift, and go to state 63
    '}'     shift, and go to state 64

    Instr   go to state 65
    IdExpr  go to state 66


State 45

   23 ListTypVar: TYPE IDENT •

    $default  reduce using rule 23 (ListTypVar)


State 46

   22 ListTypVar: STRUCT IDENT • IDENT

    IDENT  shift, and go to state 67


State 47

   15 EnTeteFonct: TYPE IDENT '(' Parametres ')' •

    $default  reduce using rule 15 (EnTeteFonct)


State 48

   20 ListTypVar: ListTypVar ',' • TYPE IDENT
   21           | ListTypVar ',' • STRUCT IDENT IDENT

    TYPE    shift, and go to state 68
    STRUCT  shift, and go to state 69


State 49

   16 EnTeteFonct: VOID IDENT '(' Parametres ')' •

    $default  reduce using rule 16 (EnTeteFonct)


State 50

   17 EnTeteFonct: STRUCT IDENT IDENT '(' Parametres • ')'

    ')'  shift, and go to state 70


State 51

   11 Declarateurs: IDENT •

    $default  reduce using rule 11 (Declarateurs)


State 52

    8 DeclStructVars: TYPE Declarateurs • ';'
   10 Declarateurs: Declarateurs • ',' IDENT

    ';'  shift, and go to state 71
    ','  shift, and go to state 21


State 53

    9 DeclStructVars: STRUCT IDENT • Declarateurs ';'

    IDENT  shift, and go to state 51

    Declarateurs  go to state 72


State 54

    6 DeclStructVars: DeclStructVars TYPE • Declarateurs ';'

    IDENT  shift, and go to state 51

    Declarateurs  go to state 73


State 55

    7 DeclStructVars: DeclStructVars STRUCT • IDENT Declarateurs ';'

    IDENT  shift, and go to state 74


State 56

    3 DeclVars: DeclVars STRUCT IDENT '{' DeclStructVars '}' • ';'

    ';'  shift, and go to state 75


State 57

    3 DeclVars: DeclVars STRUCT IDENT • '{' DeclStructVars '}' ';'
    4         | DeclVars STRUCT IDENT • Declarateurs ';'

    IDENT  shift, and go to state 51
    '{'    shift, and go to state 24

    Declarateurs  go to state 25


State 58

   31 Instr: IDENT • '(' Arguments ')' ';'
   36 IdExpr: IDENT • '.' IdExpr
   37       | IDENT •

    '('  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 37 (IdExpr)


State 59

   28 Instr: IF • '(' Exp ')' Instr
   29      | IF • '(' Exp ')' Instr ELSE Instr

    '('  shift, and go to state 78


State 60

   30 Instr: WHILE • '(' Exp ')' Instr

    '('  shift, and go to state 79


State 61

   32 Instr: RETURN • Exp ';'
   33      | RETURN • ';'

    CHARACTER  shift, and go to state 80
    NUM        shift, and go to state 81
    IDENT      shift, and go to state 82
    ADDSUB     shift, and go to state 83
    ';'        shift, and go to state 84
    '('        shift, and go to state 85
    '!'        shift, and go to state 86

    IdExpr  go to state 87
    Exp     go to state 88
    TB      go to state 89
    FB      go to state 90
    M       go to state 91
    E       go to state 92
    T       go to state 93
    F       go to state 94


State 62

   35 Instr: ';' •

    $default  reduce using rule 35 (Instr)


State 63

   34 Instr: '{' • SuiteInstr '}'

    $default  reduce using rule 26 (SuiteInstr)

    SuiteInstr  go to state 95


State 64

   24 Corps: '{' DeclVars SuiteInstr '}' •

    $default  reduce using rule 24 (Corps)


State 65

   25 SuiteInstr: SuiteInstr Instr •

    $default  reduce using rule 25 (SuiteInstr)


State 66

   27 Instr: IdExpr • '=' Exp ';'

    '='  shift, and go to state 96


State 67

   22 ListTypVar: STRUCT IDENT IDENT •

    $default  reduce using rule 22 (ListTypVar)


State 68

   20 ListTypVar: ListTypVar ',' TYPE • IDENT

    IDENT  shift, and go to state 97


State 69

   21 ListTypVar: ListTypVar ',' STRUCT • IDENT IDENT

    IDENT  shift, and go to state 98


State 70

   17 EnTeteFonct: STRUCT IDENT IDENT '(' Parametres ')' •

    $default  reduce using rule 17 (EnTeteFonct)


State 71

    8 DeclStructVars: TYPE Declarateurs ';' •

    $default  reduce using rule 8 (DeclStructVars)


State 72

    9 DeclStructVars: STRUCT IDENT Declarateurs • ';'
   10 Declarateurs: Declarateurs • ',' IDENT

    ';'  shift, and go to state 99
    ','  shift, and go to state 21


State 73

    6 DeclStructVars: DeclStructVars TYPE Declarateurs • ';'
   10 Declarateurs: Declarateurs • ',' IDENT

    ';'  shift, and go to state 100
    ','  shift, and go to state 21


State 74

    7 DeclStructVars: DeclStructVars STRUCT IDENT • Declarateurs ';'

    IDENT  shift, and go to state 51

    Declarateurs  go to state 101


State 75

    3 DeclVars: DeclVars STRUCT IDENT '{' DeclStructVars '}' ';' •

    $default  reduce using rule 3 (DeclVars)


State 76

   31 Instr: IDENT '(' • Arguments ')' ';'

    CHARACTER  shift, and go to state 80
    NUM        shift, and go to state 81
    IDENT      shift, and go to state 82
    ADDSUB     shift, and go to state 83
    '('        shift, and go to state 85
    '!'        shift, and go to state 86

    $default  reduce using rule 58 (Arguments)

    IdExpr     go to state 87
    Exp        go to state 102
    TB         go to state 89
    FB         go to state 90
    M          go to state 91
    E          go to state 92
    T          go to state 93
    F          go to state 94
    Arguments  go to state 103
    ListExp    go to state 104


State 77

   36 IdExpr: IDENT '.' • IdExpr

    IDENT  shift, and go to state 105

    IdExpr  go to state 106


State 78

   28 Instr: IF '(' • Exp ')' Instr
   29      | IF '(' • Exp ')' Instr ELSE Instr

    CHARACTER  shift, and go to state 80
    NUM        shift, and go to state 81
    IDENT      shift, and go to state 82
    ADDSUB     shift, and go to state 83
    '('        shift, and go to state 85
    '!'        shift, and go to state 86

    IdExpr  go to state 87
    Exp     go to state 107
    TB      go to state 89
    FB      go to state 90
    M       go to state 91
    E       go to state 92
    T       go to state 93
    F       go to state 94


State 79

   30 Instr: WHILE '(' • Exp ')' Instr

    CHARACTER  shift, and go to state 80
    NUM        shift, and go to state 81
    IDENT      shift, and go to state 82
    ADDSUB     shift, and go to state 83
    '('        shift, and go to state 85
    '!'        shift, and go to state 86

    IdExpr  go to state 87
    Exp     go to state 108
    TB      go to state 89
    FB      go to state 90
    M       go to state 91
    E       go to state 92
    T       go to state 93
    F       go to state 94


State 80

   54 F: CHARACTER •

    $default  reduce using rule 54 (F)


State 81

   53 F: NUM •

    $default  reduce using rule 53 (F)


State 82

   36 IdExpr: IDENT • '.' IdExpr
   37       | IDENT •
   56 F: IDENT • '(' Arguments ')'

    '('  shift, and go to state 109
    '.'  shift, and go to state 77

    $default  reduce using rule 37 (IdExpr)


State 83

   50 F: ADDSUB • F

    CHARACTER  shift, and go to state 80
    NUM        shift, and go to state 81
    IDENT      shift, and go to state 82
    ADDSUB     shift, and go to state 83
    '('        shift, and go to state 85
    '!'        shift, and go to state 86

    IdExpr  go to state 87
    F       go to state 110


State 84

   33 Instr: RETURN ';' •

    $default  reduce using rule 33 (Instr)


State 85

   52 F: '(' • Exp ')'

    CHARACTER  shift, and go to state 80
    NUM        shift, and go to state 81
    IDENT      shift, and go to state 82
    ADDSUB     shift, and go to state 83
    '('        shift, and go to state 85
    '!'        shift, and go to state 86

    IdExpr  go to state 87
    Exp     go to state 111
    TB      go to state 89
    FB      go to state 90
    M       go to state 91
    E       go to state 92
    T       go to state 93
    F       go to state 94


State 86

   51 F: '!' • F

    CHARACTER  shift, and go to state 80
    NUM        shift, and go to state 81
    IDENT      shift, and go to state 82
    ADDSUB     shift, and go to state 83
    '('        shift, and go to state 85
    '!'        shift, and go to state 86

    IdExpr  go to state 87
    F       go to state 112


State 87

   55 F: IdExpr •

    $default  reduce using rule 55 (F)


State 88

   32 Instr: RETURN Exp • ';'
   38 Exp: Exp • OR TB

    OR   shift, and go to state 113
    ';'  shift, and go to state 114


State 89

   39 Exp: TB •
   40 TB: TB • AND FB

    AND  shift, and go to state 115

    $default  reduce using rule 39 (Exp)


State 90

   41 TB: FB •
   42 FB: FB • EQ M

    EQ  shift, and go to state 116

    $default  reduce using rule 41 (TB)


State 91

   43 FB: M •
   44 M: M • ORDER E

    ORDER  shift, and go to state 117

    $default  reduce using rule 43 (FB)


State 92

   45 M: E •
   46 E: E • ADDSUB T

    ADDSUB  shift, and go to state 118

    $default  reduce using rule 45 (M)


State 93

   47 E: T •
   48 T: T • DIVSTAR F

    DIVSTAR  shift, and go to state 119

    $default  reduce using rule 47 (E)


State 94

   49 T: F •

    $default  reduce using rule 49 (T)


State 95

   25 SuiteInstr: SuiteInstr • Instr
   34 Instr: '{' SuiteInstr • '}'

    IDENT   shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60
    RETURN  shift, and go to state 61
    ';'     shift, and go to state 62
    '{'     shift, and go to state 63
    '}'     shift, and go to state 120

    Instr   go to state 65
    IdExpr  go to state 66


State 96

   27 Instr: IdExpr '=' • Exp ';'

    CHARACTER  shift, and go to state 80
    NUM        shift, and go to state 81
    IDENT      shift, and go to state 82
    ADDSUB     shift, and go to state 83
    '('        shift, and go to state 85
    '!'        shift, and go to state 86

    IdExpr  go to state 87
    Exp     go to state 121
    TB      go to state 89
    FB      go to state 90
    M       go to state 91
    E       go to state 92
    T       go to state 93
    F       go to state 94


State 97

   20 ListTypVar: ListTypVar ',' TYPE IDENT •

    $default  reduce using rule 20 (ListTypVar)


State 98

   21 ListTypVar: ListTypVar ',' STRUCT IDENT • IDENT
